--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/public/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <script>localStorage.theme = 'light'</script> -->
     <!-- <meta
       http-equiv="Content-Security-Policy"
       content="upgrade-insecure-requests"
